--- a/app/app.html
+++ b/app/app.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello Electron React!</title>
+    <title>Rinocloud watcher</title>
     <link href="./css/font-awesome.css" rel="stylesheet">
     <link href="./css/shepherd.css" rel="stylesheet">
     <link href="./css/toolkit-startup.css" rel="stylesheet">
@@ -15,6 +15,7 @@
     <link href="./css/project-custom.css" rel="stylesheet">
     <link href="./css/jsoneditor.css" rel="stylesheet">
     <link href="./css/rinocloud-icons.css" rel="stylesheet">
+    <link href="../node_modules/highlight.js/styles/github.css" rel="stylesheet">
 
     <script>
       (function() {
