have working on mac

--- a/app/app.html
+++ b/app/app.html
@@ -19,12 +19,12 @@
 
     <script>
       (function() {
-        if (!process.env.HOT) {
-          const link = document.createElement('link');
-          link.rel = 'stylesheet';
-          link.href = '../dist/style.css';
-          document.write(link.outerHTML);
-        }
+        // if (!process.env.HOT) {
+        //   const link = document.createElement('link');
+        //   link.rel = 'stylesheet';
+        //   link.href = '../dist/style.css';
+        //   document.write(link.outerHTML);
+        // }
       }());
     </script>
 
