starting to redo ui

--- a/app/app.html
+++ b/app/app.html
@@ -4,30 +4,13 @@
     <meta charset="utf-8">
     <title>Rinocloud watcher</title>
     <link href="./css/font-awesome.css" rel="stylesheet">
-    <link href="./css/shepherd.css" rel="stylesheet">
     <link href="./css/toolkit-startup.css" rel="stylesheet">
     <link href="./css/application-startup.css" rel="stylesheet">
-    <link href="./css/katex.min.css" rel="stylesheet">
-    <link href="./css/sortable.css" rel="stylesheet"/>
     <link href="./css/offline.css" rel="stylesheet"/>
-    <link href="./css/pace.css" rel="stylesheet"/>
     <link href="./css/overrides.css" rel="stylesheet">
     <link href="./css/project-custom.css" rel="stylesheet">
-    <link href="./css/jsoneditor.css" rel="stylesheet">
     <link href="./css/rinocloud-icons.css" rel="stylesheet">
-    <link href="../node_modules/highlight.js/styles/github.css" rel="stylesheet">
-
-    <script>
-      (function() {
-        // if (!process.env.HOT) {
-        //   const link = document.createElement('link');
-        //   link.rel = 'stylesheet';
-        //   link.href = '../dist/style.css';
-        //   document.write(link.outerHTML);
-        // }
-      }());
-    </script>
-
+    <link href="./css/github.css" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
