added oauth login

--- a/app/app.html
+++ b/app/app.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Rinocloud watcher</title>
 
+    <link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="./css/toolkit-startup.css">
     <link rel="stylesheet" type="text/css" href="./css/application-startup.css">
     <link rel="stylesheet" type="text/css" href="./css/rinocloud-icons.css">
@@ -20,7 +21,6 @@
       }());
     </script>
   </head>
-
 
   <body>
     <div id="root"></div>
