--- a/app/app.html
+++ b/app/app.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head lang="en">
     <meta charset="utf-8">
-    <title>Rinocloud watcher</title>
+    <title>Rinobot</title>
 
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="./css/toolkit-startup.css">
