--- a/app/app.html
+++ b/app/app.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="./css/toolkit-startup.css">
     <link rel="stylesheet" type="text/css" href="./css/application-startup.css">
     <link rel="stylesheet" type="text/css" href="./css/rinocloud-icons.css">
+    <link rel="stylesheet" type="text/css" href="./css/loaders.css">
     <link rel="stylesheet" type="text/css" href="./css/github.css">
 
     <script>
