--- a/app/app.html
+++ b/app/app.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Rinobot</title>
   </head>
-  <body>
+  <body class="light-grey-background">
     <div id="root"></div>
 
     <script>
