got rid of configurePipelines and added metadata and task for to wathdir

--- a/app/app.html
+++ b/app/app.html
@@ -3,8 +3,16 @@
   <head lang="en">
     <meta charset="utf-8">
     <title>Rinobot</title>
+    <style>
+      .toolbar{
+        -webkit-app-region: drag;
+        height: 30px;
+      }
+    </style>
   </head>
+
   <body class="light-grey-background">
+    <div class="toolbar"></div>
     <div id="root"></div>
 
     <script>
