--- a/app/app.html
+++ b/app/app.html
@@ -6,6 +6,10 @@
     <style>
       .toolbar{
         -webkit-app-region: drag;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
         height: 30px;
       }
     </style>
