--- a/app/app.html
+++ b/app/app.html
@@ -23,9 +23,7 @@
         s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/z80lonlq';var
         x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()
     </script>
-
   </head>
-
 
   <body class="light-grey-background">
     <div class="toolbar"></div>
@@ -38,8 +36,11 @@
     <script>
       (function() {
         const script = document.createElement('script');
+        script.type='text/javascript'
         script.src = (process.env.HOT) ? 'http://localhost:3000/dist/bundle.js' : 'dist/bundle.js';
-        document.write(script.outerHTML);
+
+        var x = document.getElementsByTagName('script')[0]
+        x.parentNode.insertBefore(script, x)
       }());
     </script>
 
