--- a/app/app.html
+++ b/app/app.html
@@ -33,11 +33,12 @@
       window.rinobotVersion = require('./package').version
     </script>
 
+    <script src="http://localhost:8080/webpack-dev-server.js"></script>
     <script>
       (function() {
         const script = document.createElement('script');
         script.type='text/javascript'
-        script.src = (process.env.HOT) ? 'http://localhost:3000/dist/bundle.js' : 'dist/bundle.js';
+        script.src = (process.env.HOT) ? 'http://localhost:8080/dist/bundle.js' : 'dist/bundle.js';
 
         var x = document.getElementsByTagName('script')[0]
         x.parentNode.insertBefore(script, x)
